<resources>
    <string name="app_name">RPGClicker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_asd">asd</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <string name="bp1">+1</string>
    <string name="bp5">+5</string>
    <string name="bp10">10</string>

    <string name="bDPS">Damage per second</string>
    <string name="bHPS">Heal per second</string>
    <string name="bMeeleDamage">Meele Damage</string>
    <string name="bSpellDamage">Spell Damage</string>
    <string name="bSpellHeal">Spell Heal</string>
</resources>
