<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/bDPS"
        android:id="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:textStyle="bold"
        android:textSize="15sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/bp1"
        android:id="@+id/button11"
        android:layout_below="@+id/textView1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:onClick="addDPS1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/bp5"
        android:id="@+id/button12"
        android:layout_alignBaseline="@+id/button13"
        android:layout_alignBottom="@+id/button13"
        android:layout_toEndOf="@+id/button11"
        android:layout_marginStart="10dp"
        android:onClick="addDPS5" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/bp10"
        android:id="@+id/button13"
        android:layout_alignTop="@+id/button11"
        android:layout_toEndOf="@+id/button12"
        android:layout_marginStart="10dp"
        android:onClick="addDPS10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView12"
        android:layout_alignTop="@+id/button13"
        android:layout_toEndOf="@+id/button13"
        android:layout_alignBottom="@+id/button13"
        android:layout_marginStart="50dp"
        android:gravity="center" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/bHPS"
        android:id="@+id/textView2"
        android:layout_below="@+id/button11"
        android:layout_alignStart="@+id/textView1"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="15sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/bp1"
        android:id="@+id/button21"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:onClick="addHPS1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/bp5"
        android:id="@+id/button22"
        android:layout_alignBaseline="@+id/button23"
        android:layout_alignBottom="@+id/button23"
        android:layout_toEndOf="@+id/button21"
        android:layout_marginStart="10dp"
        android:onClick="addHPS5" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/bp10"
        android:id="@+id/button23"
        android:layout_alignTop="@+id/button21"
        android:layout_toEndOf="@+id/button22"
        android:layout_marginStart="10dp"
        android:onClick="addHPS10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView22"
        android:layout_alignTop="@+id/button23"
        android:layout_toEndOf="@+id/button23"
        android:layout_alignBottom="@+id/button23"
        android:layout_marginStart="50dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/bMeeleDamage"
        android:id="@+id/textView3"
        android:layout_below="@+id/button21"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="15sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/bp1"
        android:id="@+id/button31"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:onClick="addMD1"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/bp5"
        android:id="@+id/button32"
        android:layout_alignBaseline="@+id/button33"
        android:layout_alignBottom="@+id/button33"
        android:layout_toEndOf="@+id/button31"
        android:layout_marginStart="10dp"
        android:onClick="addMD5" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/bp10"
        android:id="@+id/button33"
        android:layout_alignTop="@+id/button31"
        android:layout_toEndOf="@+id/button32"
        android:layout_marginStart="10dp"
        android:onClick="addMD10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView32"
        android:layout_alignTop="@+id/button33"
        android:layout_toEndOf="@+id/button33"
        android:layout_alignBottom="@+id/button33"
        android:layout_marginStart="50dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/bSpellDamage"
        android:id="@+id/textView4"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/button31"
        android:layout_alignStart="@+id/textView3"
        android:textStyle="bold"
        android:textSize="15sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/bp1"
        android:id="@+id/button41"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:onClick="addSD1"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/bp5"
        android:id="@+id/button42"
        android:layout_alignBaseline="@+id/button43"
        android:layout_alignBottom="@+id/button43"
        android:layout_toEndOf="@+id/button41"
        android:layout_marginStart="10dp"
        android:onClick="addSD5" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/bp10"
        android:id="@+id/button43"
        android:layout_alignTop="@+id/button41"
        android:layout_toEndOf="@+id/button42"
        android:layout_marginStart="10dp"
        android:onClick="addSD10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView42"
        android:layout_alignTop="@+id/button43"
        android:layout_toEndOf="@+id/button43"
        android:layout_alignBottom="@+id/button43"
        android:layout_marginStart="50dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/bSpellHeal"
        android:id="@+id/textView5"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/button41"
        android:layout_alignStart="@+id/textView4"
        android:textStyle="bold"
        android:textSize="15sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/bp1"
        android:id="@+id/button51"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:onClick="addSHS1"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/bp5"
        android:id="@+id/button52"
        android:layout_alignBaseline="@+id/button53"
        android:layout_alignBottom="@+id/button53"
        android:layout_toEndOf="@+id/button51"
        android:layout_marginStart="10dp"
        android:onClick="addSHS5" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/bp10"
        android:id="@+id/button53"
        android:layout_alignTop="@+id/button51"
        android:layout_toEndOf="@+id/button52"
        android:layout_marginStart="10dp"
        android:onClick="addSHS10"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView52"
        android:layout_alignTop="@+id/button53"
        android:layout_toEndOf="@+id/button53"
        android:layout_alignBottom="@+id/button53"
        android:layout_marginStart="50dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=""
        android:id="@+id/tvGold"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/button13"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp" />


</RelativeLayout>